Added gen folder and swp files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /data/*
 !/data/README
 
-# Python virtual environment.
+# Python virtual environment, and generated files.
 /venv
+/gen
 
 # Other stuff.
 *.pyc
+*.swp
